fix: fixed email feature and added to build file

--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,16 @@
 plugins {
     id 'java'    
     id 'application'
+
+
 }
 
 group 'se.DD2480Group3'
 version '1.0-SNAPSHOT'
 
 repositories {
-    mavenCentral()    
+    mavenCentral()  
+    maven { url 'https://repo.gradle.org/gradle/libs-releases' }  
 }
 
 sourceSets{
@@ -24,11 +27,11 @@ sourceSets{
         }
     }
     /* uncomment if you have junit set up*/
- //   test{
- //       java {
- //           srcDirs = ['test']
- //       }
- //   }
+   test{
+       java {
+           srcDirs = ['test']
+       }
+   }
 }
 
 dependencies {
@@ -36,22 +39,27 @@ dependencies {
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
 //    testRunTimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     /* Servlet dependencies */
-      implementation 'org.eclipse.jetty:jetty-server:9.4.31.v20200723'
-      compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
-}
+    implementation 'org.eclipse.jetty:jetty-server:9.4.31.v20200723'
+    //   implementation 'javax.activation:javax.activation-api:1.2.0'
+    implementation 'com.sun.mail:mailapi:1.6.7'
+    implementation 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'javax.mail:mailapi:1.4.3-rc1'
+    implementation 'javax.mail:mail:1.4.7'
+
+}   
 
 application {
     /* to compile and run */ 
-   mainClassName = 'ContinuousIntegrationServer' 
+   mainClassName = 'Main' 
 }
 
 
 /* uncomment if you have junit set up*/
-//test {
-//    useJUnitPlatform()
-//    testLogging{
-//        events "passed", "skipped", "failed"
-//    }
+test {
+   useJUnitPlatform()
+   testLogging{
+       events "passed", "skipped", "failed"
+   }
 
-//}
+}
 
