--- a/build.gradle
+++ b/build.gradle
@@ -29,18 +29,17 @@ sourceSets{
     /* uncomment if you have junit set up*/
    test{
        java {
-           srcDirs = ['test']
+           srcDirs = ['test/se/DD2480Group3/assignment2']
        }
    }
 }
 
 dependencies {
-    /* uncomment if you have junit set up*/
-//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-//    testRunTimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+   implementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+   implementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
     /* Servlet dependencies */
     implementation 'org.eclipse.jetty:jetty-server:9.4.31.v20200723'
-    //   implementation 'javax.activation:javax.activation-api:1.2.0'
     implementation 'com.sun.mail:mailapi:1.6.7'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'javax.mail:mailapi:1.4.3-rc1'
