--- a/build.gradle
+++ b/build.gradle
@@ -38,13 +38,15 @@ sourceSets{
 dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-
     /* Servlet dependencies */
     implementation 'org.eclipse.jetty:jetty-server:9.4.31.v20200723'
     implementation 'com.sun.mail:mailapi:1.6.7'
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'javax.mail:mailapi:1.4.3-rc1'
     implementation 'javax.mail:mail:1.4.7'
+
+    implementation "org.gradle:gradle-tooling-api:8.6"
+    runtimeOnly 'org.slf4j:slf4j-simple:1.7.10'
 
 }   
 
